--- a/backend/package.json
+++ b/backend/package.json
@@ -21,14 +21,14 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
